<resources>
    <string name="app_name">Fridge-i-nator</string>
    <string name="overviewActivityListItem_tv_frigeName">Fridge Name</string>
    <string name="fridgeListAdaptor_tv_fridgeName">Fridge Name</string>
    <string name="title_activity_details" translatable="false">DetailsActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="details_tap1_inventory_btn_addItem">Add Item</string>
    <string name="shoppinglist_tab3_shoppinglistListName">Name</string>
    <string name="shoppinglist_tab3_shoppinglistListResponsible">Responsible</string>
    <string name="USERS">Users</string>
    <string name="shoppinglistActivity_tv_name">Name</string>
    <string name="shoppinglistActivity_tv_quantity">Quantity</string>
    <string name="shoppinglistActivity_tv_unit">Unit</string>
    <string name="shoppinglist_btn_allBought">All Bought</string>
    <string name="NAME">Name</string>
    <string name="UNIT">Unit</string>
    <string name="QUANTITY">Quantity</string>
    <string name="RESPONSIBLE_USER_EMAIL" translatable="false">ResponsibleUserEmail</string>
    <string name="ITEM_STATUS" translatable="false">itemStatus</string>
    <string name="ID">ID</string>
    <string name="INFO" translatable="false">Info</string>
    <string name="SHOPPING_LISTS" translatable="false">ShoppingLists</string>
    <string name="NONE" translatable="false">None</string>
    <string name="INGREDIENT_LISTS" translatable="false">IngredientLists</string>
    <string name="SHOPPING_LIST_IDS" translatable="false">ShoppingList_IDs</string>
    <string name="IDS" translatable="false">IDs</string>
    <string name="INGREDIENT_LIST_IDS" translatable="false">IngredientList_IDs</string>
    <string name="FRIDGES" translatable="false">Fridges</string>
    <string name="CONTENT" translatable="false">Content</string>
    <string name="EMAIL" translatable="false">email</string>
    <string name="INVENTORY" translatable="false">Inventory</string>
    <string name="ITEMS" translatable="false">Items</string>
    <string name="ESSENTIALS" translatable="false">Essentials</string>
    <string name="FRIDGE_SUBS" translatable="false">FridgeSubscribtions</string>
    <string name="ingredientsTab4_tv_ingredienslistName">Name of ingredientslist</string>
    <string name="ingredientslistActivity_tv_name">Name</string>
    <string name="ingredientslistActivity_tv_unit">Unit</string>
    <string name="ingredientslistActivity_tv_quantity">Quantity</string>
    <string name="DATA_UPDATED" translatable="false">DataUpdated</string>
    <string name="ESSENTIALS_SHOPPING_LIST" translatable="false">EssentialsShoppingList</string>
    <string name="ESSENTIALS_SHOPPING_LIST_NAME" translatable="false">Essentials Shopping List</string>
    <string name="SUCCSSFULLY_SIGNED_IN_AS">Successfully signed in as</string>
    <string name="SIGN_IN_FAILED">Sign in failed.</string>
    <string name="SUCCESSFULLY_LOGGED_OUT">Successfully logged out.</string>
    <string name="LOG_IN">Log in</string>
    <string name="LOG_OUT">Log out</string>
    <string name="currentFridgeID" translatable="false">CurrentFridgeID</string>
    <string name="PositionOfIngredientsList" translatable="false">PositionOfIngredientsList</string>
    <string name="DIALOG_addNewItem">Add new Item</string>
    <string name="DIALOG_HINT_name">Name:</string>
    <string name="DIALOG_HINT_quantity">Quantity:</string>
    <string name="DIALOG_HINT_unit">Unit:</string>
    <string name="DIALOG_add_button">Add</string>
    <string name="DIALOG_cancel_button">Cancel</string>
    <string name="DIALOG_apply_button">Apply</string>
    <string name="DIALOG_yes_button">Yes</string>
    <string name="ADD_NEW_FRIDGE">Add new Fridge</string>
    <string name="ADD_EXISTING_FRIDGE">Add existing fridge</string>
    <string name="WELCOME">Welcome</string>
    <string name="CREATE_NEW_FRIDGE">Create new fridge</string>
    <string name="ADD">Add</string>
    <string name="CANCEL">Cancel</string>
    <string name="ENTER_UNIQUE_ID">Enter unique ID of the fridge you want to subscribe to</string>
    <string name="CLICKED_FRIDGE_ID" translatable="false">clickedFridgeID</string>
    <string name="SHARE_OR_DELETE_FRIDGE">Do you want to Share or Delete the fridge?</string>
    <string name="SHARE">Share</string>
    <string name="FRIDGE_ID">Fridge ID</string>
    <string name="DELETE">Delete</string>
    <string name="PAGE_TITLE_INVENTORY">Inventory</string>
    <string name="PAGE_TITLE_ESSENTIALS">Essentials</string>
    <string name="PAGE_TITLE_SHOPPING_LISTS">Shopping lists</string>
    <string name="PAGE_TITLE_INGREDIENTS">Ingredient lists</string>
    <string name="textview">TextView</string>
    <string name="DIALOG_TITLE_newItem">New Item</string>
    <string name="DIALOG_TITLE_delete_yes_no">Are you sure you want to delete this item?</string>
    <string name="ADD_ITEM">Add item</string>
    <string name="ADD_TO_SHOPPINGLIST">Add to shopping list</string>
    <string name="NEW_ITEM">New item</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="NEW_SHOPPING_LIST">New Shopping List</string>
    <string name="CURRENT_FRIDGE_ID" translatable="false">CurrentFridgeID</string>
    <string name="POSITION_OF_SHOPPING_LIST" translatable="false">PositionOfShoppingList</string>
    <string name="WANT_TO_CLAIM_RESPONSIBILITY">Do you want to claim responsibility for this shopping list?</string>
    <string name="YES">Yes</string>
    <string name="DELETE_LIST">Delete List</string>
    <string name="ADD_NEW_LIST">Add new List</string>
    <string name="NEW_INGREDIENT_LIST">New ingredient list</string>
    <string name="responsebility">Responsibility</string>
    <string name="add_item">Add item</string>
    <string name="APPLY">Apply</string>
    <string name="newItem">New Item</string>
    <string name="NEEDED">Needed</string>
    <string name="areYouSureYouWantToDeleteThisItem">Are you sure you wanna delete this item?</string>
    <string name="moveToFridge">Move to fridge</string>
    <string name="dataUpdated" translatable="false">DataUpdated</string>
    <string name="DB_NAME" translatable="false">Name</string>
    <string name="areYouSureYouWantToMoveAllItemsToInventory">Are you sure you want to move all items to inventory?</string>
    <string name="DB_USERS" translatable="false">Users</string>
    <string name="DB_UNIT" translatable="false">Unit</string>
    <string name="DB_QUANTITY" translatable="false">Quantity</string>
    <string name="DB_RESPONSIBLE_USER_EMAIL" translatable="false">ResponsibleUserEmail</string>
    <string name="DB_ITEM_STATUS" translatable="false">itemStatus</string>
    <string name="DIALOG_delete_list">Are you sure you want to delete this list?</string>
</resources>
